[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asitop"
version = "0.0.22"
description = "Performance monitoring CLI tool for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["asitop", "apple silicon", "performance", "monitoring"]
authors = [
    {name = "Timothy Liu", email = "tlkh.xms@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "dashing>=0.1.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "types-psutil>=5.9.0",
]

[project.scripts]
asitop = "asitop.asitop:main"

[project.urls]
Homepage = "https://github.com/tlkh/asitop"
Repository = "https://github.com/tlkh/asitop"

[tool.setuptools]
packages = ["asitop"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=asitop --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["asitop"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Check untyped function bodies for type errors (good for finding bugs)
check_untyped_defs = true
strict_optional = true
# Allow untyped definitions (flexible for this codebase)
disallow_untyped_defs = false
# Global ignore for missing imports (psutil, dashing)
# TODO: Consider migrating to per-module ignores for better type coverage
ignore_missing_imports = true
# Disable noisy checks that don't add value for this codebase
disable_error_code = ["var-annotated", "assignment"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable rule sets that cover flake8 and pylint functionality
select = [
    "E",      # pycodestyle errors (flake8)
    "W",      # pycodestyle warnings (flake8)
    "F",      # pyflakes (flake8)
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PL",     # pylint rules
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that match previous pylint disables
ignore = [
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "SIM108",  # Use ternary operator (can reduce readability)
    "F403",    # Star imports used in utils pattern
    "F405",    # May be undefined from star imports
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Tests can use assert statements, have longer functions, and use imports inside functions
# Also allow unused variables, try-except-pass patterns, and naming conventions in tests
"tests/*" = ["PLR2004", "PLR0915", "PLC0415", "F841", "SIM105", "N806", "RUF059"]
# Main module can have more complexity
"asitop/asitop.py" = ["PLR0912", "PLR0915"]

[tool.ruff.lint.pylint]
# Match previous pylint max-line-length
max-args = 7
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = ["asitop"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''
