[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asitop"
version = "0.0.22"
description = "Performance monitoring CLI tool for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["asitop", "apple silicon", "performance", "monitoring"]
authors = [
    {name = "Timothy Liu", email = "tlkh.xms@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "dashing>=0.1.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.0",
    "types-psutil>=5.9.0",
]

[project.scripts]
asitop = "asitop.asitop:main"

[project.urls]
Homepage = "https://github.com/tlkh/asitop"
Repository = "https://github.com/tlkh/asitop"

[tool.setuptools]
packages = ["asitop"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=asitop --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["asitop"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Check untyped function bodies for type errors (good for finding bugs)
check_untyped_defs = true
strict_optional = true
# Allow untyped definitions (flexible for this codebase)
# disallow_untyped_defs = false
# best practice setting
disallow_untyped_defs = true
# Global ignore for missing imports (psutil, dashing)
# TODO: Consider migrating to per-module ignores for better type coverage
# ignore_missing_imports = true
# Disable noisy checks that don't add value for this codebase
# disable_error_code = ["var-annotated", "assignment"]
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_reexport = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["psutil.*", "dashing.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
# Preview mode enables upcoming rule improvements and modern best practices
preview = true
# Show fix availability for all violations
show-fixes = true
# Fail on unfixable violations to maintain strict standards
force-exclude = true

[tool.ruff.lint]
# Comprehensive, strict rule selection following modern Python best practices
select = [
    "ALL",    # Enable all rules by default, then selectively ignore
]

# Strategic ignores for practical development while maintaining high standards
ignore = [
    # Documentation (opt-in basis - enable D when you want full docstring coverage)
    "D",       # pydocstyle - documentation
    "DOC",     # pydoclint - docstring parameter documentation

    # Complexity metrics (customized below in pylint section)
    "PLR0913", # Too many arguments - configurable limit below
    "PLR2004", # Magic value in comparison - acceptable for constants
    "PLR0912", # Too many branches - allowed for main logic files
    "PLR0915", # Too many statements - allowed for main logic files
    "PLR0914", # Too many local variables - allowed for complex functions
    "C901",    # Function too complex - using McCabe setting instead

    # Code style preferences
    "SIM108",  # Use ternary operator - can reduce readability
    "COM812",  # Trailing comma missing - conflicts with formatter
    "ISC001",  # Implicit string concatenation - conflicts with formatter
    "ERA001",  # Commented-out code - sometimes useful during development

    # Import patterns
    "F403",    # Star imports - used intentionally in utils
    "F405",    # May be undefined from star imports
    "TID252",  # Relative imports - allow for package structure

    # Controversial or overly strict rules
    "FBT001",  # Boolean positional arg - acceptable in CLI tools
    "FBT002",  # Boolean default arg - acceptable in CLI tools
    "TD002",   # Missing TODO author - not required
    "TD003",   # Missing TODO link - not required
    "FIX002",  # TODO comments - allowed during development

    # Performance (profile before optimizing)
    "PERF203", # try-except in loop - acceptable for error handling

    # Legal/copyright
    "CPY001",  # Missing copyright notice - not required for all projects

    # Security (be selective about what to allow)
    "S404",    # subprocess import - needed for this tool
    "S603",    # subprocess without shell=True check - we control inputs
    "S607",    # Partial executable path - acceptable for system tools
    "S108",    # Hardcoded temp directory - standard for this tool
    "S112",    # try-except-continue - acceptable for parsing loops
    "BLE001",  # Blind except Exception - acceptable for cleanup handlers

    # Exception handling patterns
    "TRY300",  # Consider moving to else block - style preference

    # Path operations
    "PTH207",  # Use Path.glob - glob.glob is acceptable
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files
"__init__.py" = [
    "F401",    # Unused import - expected in __init__.py
    "F403",    # Star import - expected in __init__.py
    "D104",    # Missing docstring in public package
]

# Test files get more flexibility
"tests/*" = [
    "S101",    # Use of assert - required for pytest
    "S108",    # Hardcoded temp directory - acceptable in tests
    "PLR2004", # Magic values - acceptable in test data
    "PLR0915", # Too many statements - tests can be long
    "PLR6301", # Method could be function/staticmethod - unittest requires self
    "PLC0415", # Import outside top-level - needed for fixtures
    "F841",    # Unused variable - acceptable in test setup
    "SIM105",  # Use contextlib.suppress - try/pass is clearer in tests
    "N806",    # Non-lowercase variable - test data varies
    "RUF059",  # Function call in dataclass defaults
    "PT009",   # Use pytest-style assertions - using unittest for now
    "ANN",     # Type annotations - optional in tests
    "D",       # Docstrings - optional in tests
    "ARG001",  # Unused function argument - pytest fixtures
    "ARG002",  # Unused method argument - pytest fixtures
]

# Main module can have more complexity due to CLI nature
"asitop/asitop.py" = [
    "PLR0912", # Too many branches - main CLI logic
    "PLR0915", # Too many statements - main CLI logic
    "PLR1702", # Too many nested blocks - main event loop
    "T201",    # print statements - CLI tool uses print
]

[tool.ruff.lint.pylint]
# Balanced complexity limits - strict but practical
max-args = 7           # Maximum function arguments
max-branches = 15      # Maximum branches in function
max-returns = 6        # Maximum return statements
max-statements = 50    # Maximum statements in function
max-public-methods = 20

[tool.ruff.lint.isort]
known-first-party = ["asitop"]
# Modern import sorting configuration
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-bugbear]
# Extend immutable calls for better immutability checks
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-type-checking]
# Move type-checking only imports into TYPE_CHECKING blocks
strict = true

[tool.ruff.lint.flake8-tidy-imports]
# Ban relative imports for better maintainability
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
# Maximum allowed complexity (lower is stricter)
max-complexity = 15

[tool.ruff.lint.pep8-naming]
# Enforce PEP 8 naming conventions strictly
classmethod-decorators = ["classmethod"]

[tool.ruff.format]
# Modern formatter configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.black]
# Line length consistent with ruff
line-length = 100

# Target the minimum supported Python version
target-version = ["py312", "py313", "py314"]

# Enable preview features for modern formatting (opt-in to upcoming changes)
preview = false

# Magic trailing comma handling (respect existing trailing commas)
skip-magic-trailing-comma = false

# Skip string normalization to preserve existing quote style if needed
# Set to true (default) to normalize to double quotes
skip-string-normalization = false

# Force exclude patterns (comprehensive exclusion list)
force-exclude = '''
/(
    \.direnv
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pytest_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | venv
  | \.svn
  | \.ipynb_checkpoints
  | _build
  | buck-out
  | build
  | dist
  | __pypackages__
)/
'''

# File patterns to include
include = '\.pyi?$'
